--- a/index.html
+++ b/index.html
@@ -52,18 +52,16 @@ is probably faster.</p>
 
 <p>First, install pails:</p>
 
-<pre><code>git clone https://github.com/bparks/pails.git
-cd pails &amp;&amp; make install              # Note: if you don't have permissions to
-                                      # /usr/local/**/, you'll need to precede
-                                      # the installation command with 'sudo'
-</code></pre>
+<div class="highlight highlight-sh"><pre>git clone https://github.com/bparks/pails.git
+<span class="pl-s3">cd</span> pails <span class="pl-k">&amp;&amp;</span> make install        <span class="pl-c"># Note: if you don't have permissions to</span>
+                                <span class="pl-c"># /usr/local/**/, you'll need to precede</span>
+                                <span class="pl-c"># the installation command with 'sudo'</span></pre></div>
 
 <p>Then, run the pails command to build out a new tree for you:</p>
 
-<pre><code>pails new my_pails_app    # Creates a new app
-cd my_pails_app
-pails server    # Runs the PHP development server (requires PHP 5.4+)
-</code></pre>
+<div class="highlight highlight-sh"><pre>pails new my_pails_app    <span class="pl-c"># Creates a new app</span>
+<span class="pl-s3">cd</span> my_pails_app
+pails server    <span class="pl-c"># Runs the PHP development server (requires PHP 5.4+)</span></pre></div>
 
 <h2>
 <a id="build-an-app" class="anchor" href="#build-an-app" aria-hidden="true"><span class="octicon octicon-link"></span></a>Build an app!</h2>
@@ -71,8 +69,7 @@ pails server    # Runs the PHP development server (requires PHP 5.4+)
 <p>Models go in /models and extend ActiveRecord\Model. If you're using models, you'll
 need the pails activerecord plugin:</p>
 
-<pre><code>pails install activerecord
-</code></pre>
+<div class="highlight highlight-sh"><pre>pails install activerecord</pre></div>
 
 <p>Controllers go in /controllers with names like StuffController (case matters)
 and extend Pails\Controller.</p>
@@ -98,19 +95,17 @@ request against the <a href="https://github.com/bparks/pails-plugins">pails-plug
 public methods, which are configured as before or after actions with a class-level
 variable called <code>$before_actions</code> or <code>$after_actions</code>, like so:</p>
 
-<pre><code>$before_actions = array('require_login', 'require_admin');
-</code></pre>
+<div class="highlight highlight-php"><pre><span class="pl-s2"><span class="pl-vo">$before_actions</span> <span class="pl-k">=</span> <span class="pl-s3">array</span>(<span class="pl-s1"><span class="pl-pds">'</span>require_login<span class="pl-pds">'</span></span>, <span class="pl-s1"><span class="pl-pds">'</span>require_admin<span class="pl-pds">'</span></span>);</span></pre></div>
 
 <p>The referenced functions can't take any arguments.</p>
 
 <p>You can also exclude them from beign applicable to certain actions by making this
 array associative,  like so:</p>
 
-<pre><code>$before_actions = array(
-    'require_login',
-    'require_admin' =&gt; array('except' =&gt; array('index'))
-);
-</code></pre>
+<div class="highlight highlight-php"><pre><span class="pl-s2"><span class="pl-vo">$before_actions</span> <span class="pl-k">=</span> <span class="pl-s3">array</span>(</span>
+<span class="pl-s2">    <span class="pl-s1"><span class="pl-pds">'</span>require_login<span class="pl-pds">'</span></span>,</span>
+<span class="pl-s2">    <span class="pl-s1"><span class="pl-pds">'</span>require_admin<span class="pl-pds">'</span></span> <span class="pl-k">=&gt;</span> <span class="pl-s3">array</span>(<span class="pl-s1"><span class="pl-pds">'</span>except<span class="pl-pds">'</span></span> <span class="pl-k">=&gt;</span> <span class="pl-s3">array</span>(<span class="pl-s1"><span class="pl-pds">'</span>index<span class="pl-pds">'</span></span>))</span>
+<span class="pl-s2">);</span></pre></div>
 
 <p>BE WARNED that in a future release, the way to do this properly will be to fiddle
 with these variables (or preferably to call a method by the same name, which doesn't
